--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -8,10 +8,12 @@ pipeline {
             stages {
                 stage('Iniciar proceso pipeline') {
                     steps {
-                        echo "Iniciar proceso pipeline"
-                    }
-                    steps {
-                        checkout scm
+                        step {
+                            echo "Iniciar proceso pipeline"
+                        }
+                        steps {
+                            checkout scm
+                        }
                     }
                 }
                 stage('Acciones NODE') {
