--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -30,12 +30,12 @@ pipeline {
             }
         }
         stage('docker') {
+            agent any
             steps {
                 sh 'docker build -t localhost:8082/app_ts .'
                 sh "docker tag localhost:8082/app_ts localhost:8082/app-ts:${env.BUILD_NUMBER}"
                 sh 'docker push localhost:8082/app_ts'
                 sh "docker push localhost:8082/app_ts:${env.BUILD_NUMBER}"
-
             }
         }
     }    
