Test: Build y push docker it4

--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -29,13 +29,13 @@ pipeline {
                 }
             }
         }
-        stage('docker') {
-            steps {
-                sh 'docker build -t localhost:8082/app_ts .'
-                sh "docker tag localhost:8082/app_ts localhost:8082/app-ts:${env.BUILD_NUMBER}"
-                sh 'docker push localhost:8082/app_ts'
-                sh "docker push localhost:8082/app_ts:${env.BUILD_NUMBER}"
-            }
-        }
+        // stage('docker') {
+        //     steps {
+        //         sh 'docker build -t localhost:8082/app_ts .'
+        //         sh "docker tag localhost:8082/app_ts localhost:8082/app-ts:${env.BUILD_NUMBER}"
+        //         sh 'docker push localhost:8082/app_ts'
+        //         sh "docker push localhost:8082/app_ts:${env.BUILD_NUMBER}"
+        //     }
+        // }
     }    
 }
